# glit

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
docs/: CMakeLists.txt  Doxyfile.in
include/glit/: commit_edge.hpp  commit_node.hpp  error.hpp  gui.hpp  imconfig.hpp
src/: CMakeLists.txt  main.cpp
src/glit/: commit_edge.cpp  commit_node.cpp  gui.cpp
